Prevent horizontal scrollbar in Settings
Screenshots: https://imgur.com/a/FJxX5vZ

Follow-up to https://crrev.com/c/6048829

Bug: 325442387
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6170692
Commit-Queue: Wolfgang Beyer <wolfi@chromium.org>
Auto-Submit: Wolfgang Beyer <wolfi@chromium.org>

--- a/front_end/panels/settings/settingsScreen.css
+++ b/front_end/panels/settings/settingsScreen.css
@@ -91,7 +91,7 @@ div:has(.settings-select) + div:has(.settings-select) {
   > devtools-button {
     min-width: var(--sys-size-31);
     max-width: var(--sys-size-35);
-    width: 100%;
+    width: calc(100% - var(--sys-size-5));
     margin-left: var(--sys-size-5);
   }
 }
